// DBML group export excluding Django system tables
// Generated from Django models and migrations
// Group file: 02_catalog_instructors_courses.dbml
// NHOM 2: DANH MUC, GIANG VIEN, KHOA HOC
// Only includes intra-group relationships

// Primary tables
Table Courses {
  id integer [pk, not null]
  title varchar [not null]
  shortdescription varchar
  description varchar
  instructor_id integer
  category_id integer
  subcategory_id integer
  thumbnail varchar
  price decimal [not null]
  discount_price decimal
  discount_start_date datetime
  discount_end_date datetime
  level varchar [not null]
  language varchar [not null]
  duration integer
  total_lessons integer [not null]
  total_modules integer [not null]
  requirements varchar
  learning_objectives varchar [not null]
  target_audience varchar [not null]
  skills_taught varchar [not null]
  prerequisites varchar [not null]
  tags varchar [not null]
  promotional_video varchar
  status varchar [not null]
  is_featured boolean [not null]
  is_public boolean [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
  published_date datetime
  content_changed_since_publish boolean [not null]
  rating decimal [not null]
  total_reviews integer [not null]
  total_students integer [not null]
  certificate boolean [not null]
}

Table Instructors {
  id integer [pk, not null]
  user_id integer
  bio varchar
  specialization varchar
  qualification varchar
  experience integer
  social_links varchar
  rating decimal [not null]
  total_students integer [not null]
  total_courses integer [not null]
  payment_info varchar
  level_id integer
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
}

Table Categories {
  id integer [pk, not null]
  name varchar [not null]
  description varchar
  icon varchar
  parent_category_id integer
  status varchar [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table lessons_lesson {
  id integer [pk, not null]
  coursemodule_id integer [not null]
  title varchar [not null]
  description varchar
  content_type varchar [not null]
  content varchar
  video_url varchar
  video_public_id varchar
  file_path varchar
  duration integer
  is_free boolean [not null]
  order integer [not null]
  status varchar [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
}

Table CourseModules {
  id integer [pk, not null]
  course_id integer
  title varchar [not null]
  description varchar
  order_number integer [not null]
  duration integer
  status varchar [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
}

Table LessonAttachments {
  id integer [pk, not null]
  lesson_id integer
  title varchar
  file_path varchar [not null]
  file_type varchar
  file_size integer
  download_count integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
}

Table InstructorLevels {
  id integer [pk, not null]
  name varchar [not null]
  description varchar
  min_students integer [not null]
  min_revenue decimal [not null]
  commission_rate decimal [not null]
  plan_commission_rate decimal [not null]
  min_plan_minutes integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
}

// Relationships
Ref: Categories.parent_category_id > Categories.id
Ref: CourseModules.course_id > Courses.id
Ref: Courses.category_id > Categories.id
Ref: Courses.instructor_id > Instructors.id
Ref: Courses.subcategory_id > Categories.id
Ref: Instructors.level_id > InstructorLevels.id
Ref: LessonAttachments.lesson_id > lessons_lesson.id
Ref: lessons_lesson.coursemodule_id > CourseModules.id
